# scripts

./: Makefile  create_c.sh  scaffold-c
create_c_files/: .gitignore  colors.h  help.md
learning/: grades_praise.sh
scaffold-c-files/: CMakeLists.txt  Makefile  README.md  build.sh  help.md  main.c
